// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render expense summary with 1 item 1`] = `
<h1>
  Viewing 
  1
   
  expense
   totalling 
  $94.34
</h1>
`;

exports[`should render expense summary with 2 items 1`] = `
<h1>
  Viewing 
  2
   
  expenses
   totalling 
  $94.34
</h1>
`;
